--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,7 @@
       			<version>3.1</version>
       			<configuration>
         				<staleMillis>1</staleMillis>
-        				<useIncrementalCompilation>true</useIncrementalCompilation>
+        				<useIncrementalCompilation>false</useIncrementalCompilation>
       			</configuration>
     			</plugin>
 		</plugins>
