--- a/server.properties
+++ b/server.properties
@@ -1,6 +1,6 @@
 #Properties Config file
 #2017-01-15 01:46:29
-motd=2p2e - 2pocket2edition
+motd=§c2p2e - 2pocket2edition
 server-port=19132
 server-ip=0.0.0.0
 view-distance=8
