--- a/nukkit.yml
+++ b/nukkit.yml
@@ -8,7 +8,7 @@ settings:
  language: "eng"
  #Whether to send all strings translated to server locale or let the device handle them
  force-language: true
- shutdown-message: "Server closed"
+ shutdown-message: "&c&lServer closed"
  #Allow listing plugins via Query
  query-plugins: false
  #Show a console message when a plugin uses deprecated API methods
@@ -98,9 +98,9 @@ ticks-per:
 
 spawn-limits:
  #Max amount of these entities
- monsters: 70
- animals: 15
- water-animals: 5
+ monsters: 0
+ animals: 0
+ water-animals: 0
  ambient: 15
  
 player:
@@ -117,6 +117,6 @@ aliases:
 worlds:
  #These settings will override the generator set in server.properties and allows loading multiple levels
  #Example:
- #world:
- # seed: 404
- # generator: FLAT:2;7,59x1,3x3,2;1;decoration(treecount=80 grasscount=45)
+ nether:
+  seed: 1
+  generator: NETHER
