--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
 			<artifactId>Nedis</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency> 
+            <groupId>com.google.guava</groupId> 
+            <artifactId>guava</artifactId> 
+            <version>21.0</version> 
+        </dependency> 
 	</dependencies>
 
 	<build>
