--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Properties Config file
-motd=§c2p2e - 2pocket2edition
+motd=§c2p2e TEMP SERVER
 server-port=19132
 server-ip=0.0.0.0
 view-distance=8
